@startuml

class Producto {
    codigo : string
    tipo : Categoria
    stockDisponible : integer
    stockMinimo : integer
    precio : numeric
    proveedor : Proveedor

}

class Cliente{
    cedula: string
    nombres : string
    telefono : string
    direccion : string
}

class Venta{
    numero : string
    fecha : date
    cliente : Cliente
    subtotal : numeric
    impuesto : numeric
    total : numeric

}

Class VentaDetalle{
    producto : Producto
    cantidad: integer
    impuesto : numeric
    precio : numeric
    totalItem : numeric

}

class Pago{
    monto : numeric
}

class Credito{
    fecha : date
    numero : numeric
}
Class Efectivo{
}

Venta --> Cliente
Venta "1" o-- "1..*" VentaDetalle
VentaDetalle --> Producto
Venta "1" --> "1..*" Pago
Pago <|-- Credito
Pago <|-- Efectivo

@enduml